--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="/Java_v1"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/java_v1"/>
+	<classpathentry kind="lib" path="C:/Users/alvar/OneDrive/Desktop/commons-csv-1.10.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
