--- a/.project
+++ b/.project
@@ -3,7 +3,7 @@
 	<name>Java1-AlvaroMartinVazquez</name>
 	<comment></comment>
 	<projects>
-		<project>Java_v1</project>
+		<project>java_v1</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
